--- a/styles.css
+++ b/styles.css
@@ -199,3 +199,16 @@ iframe {
     height: 1000vh;
   }
 }
+.logout-btn {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  background-color: #00338D;
+  color: white;
+  padding: 10px 15px;
+  text-decoration: none;
+  border-radius: 5px;
+}
+.logout-btn:hover {
+  background-color: #0055cc;
+}
